language/move-lang/tests/move_check/typing/loop_result_type_invalid.exp
error: 

    ┌── tests/move_check/typing/loop_result_type_invalid.move:10:15 ───
    │
 10 │     fun t0(): X::R {
    │               ---- Is not compatible with: '0x1::X::R'
 11 │         loop { if (false) break }
    │         ------------------------- The type: '()'
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/loop_result_type_invalid.move:14:15 ───
    │
 14 │     fun t1(): u64 {
    │               --- Is not compatible with: 'u64'
 15 │         loop { let x = 0; break }
    │         ------------------------- The type: '()'
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid return expression
    │

error: 

    ┌── tests/move_check/typing/loop_result_type_invalid.move:19:9 ───
    │
 19 │         foo(loop { break })
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call of '0x1::M::foo'. Invalid argument for parameter 'x'
    │             -------------- The type: '()'
    ·
 22 │     fun foo(x: u64) {}
    │                --- Is not compatible with: 'u64'
    │

error: 

    ┌── tests/move_check/typing/loop_result_type_invalid.move:25:13 ───
    │
 25 │         let x = loop { break };
    │             ^ Invalid type for local
    │                 -------------- Expected a single type, but found expression list type: '()'
    │

error: 

    ┌── tests/move_check/typing/loop_result_type_invalid.move:26:13 ───
    │
 26 │         let (x, y) = loop { if (false) break };
    │             ------ The type: '(_, _)'
    │             ^^^^^^ Invalid value for binding
    │                      ------------------------- Is not compatible with: '()'
    │

